Fix whitespace

--- a/styles/accessibility.css
+++ b/styles/accessibility.css
@@ -170,8 +170,8 @@ a[href='#'][title^=Top] {
   /* opacity: 0.681; */
   background: red;
   /* margin-block: auto; */
-  margin: 2em auto;
-  /* display: list-item; */
+  /* margin: 2em auto; */
+  display: list-item; */
   em; */
   list-style-type: 'Foo';
 }
